--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="imgenes/seguridad.jpeg" class="d-block w-100" alt="Tercera imagen">
+            <img src="imgenes/mlp.webp" class="d-block w-100" alt="Tercera imagen">
             <div class="container">
               <div class="carousel-caption text-end">
                 <h1>Lenguaje sencillo</h1>
