--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     </section>
 <section class="info py-5">
       <div class="container">
-        <h2 class="text-center fw-bold mb-4 text-purple">Sobre el Asistente de Hardening</h2>
+        <h2 class="text-center fw-bold mb-4 text-purple">Sobre VirusHunter</h2>
         <p>
           El <strong>Asistente Interactivo de Hardening</strong> es una herramienta informativa que analiza la configuración de seguridad
           del sistema Windows y proporciona recomendaciones detalladas para mejorarla. No realiza cambios automáticos en el sistema,
@@ -159,6 +159,27 @@
         <i class="bi bi-file-earmark-code-fill fs-1 text-purple"></i>
         <h5 class="fw-bold mt-3">Generación de informes</h5>
         <p>La información obtenida se organiza automáticamente en un archivo JSON, que resume el estado de seguridad del sistema.</p>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="objetivos py-5 text-center">
+  <div class="container">
+    <h2 class="fw-bold mb-4">Objetivos del Proyecto</h2>
+
+    <div class="row justify-content-center">
+      <div class="col-md-8">
+        <h4 class="fw-bold text-purple">General</h4>
+        <p>
+          Analizar las vulnerabilidades presentes en los sistemas Windows mediante la herramienta VirusHunter, con el fin de fortalecer la seguridad y protección de los equipos.
+        </p>
+
+        <h4 class="fw-bold text-purple mt-4">Específicos</h4>
+        <ul class="list-unstyled">
+          <li>• Determinar el estado actual de la seguridad del sistema Windows a través del análisis del asistente.</li>
+          <li>• Identificar amenazas y vulnerabilidades detectadas por VirusHunter en el entorno del usuario.</li>
+          <li>• Establecer recomendaciones y procedimientos para mejorar la protección general del sistema.</li>
+        </ul>
       </div>
     </div>
   </div>
@@ -221,7 +242,7 @@ Con una interfaz visual sencilla, analiza el estado de seguridad del sistema y m
 
     <footer class="text-center py-3">
       <div class="copyright">
-        <p>© 2025 | Ingeniería en Sistemas</p>
+        <p> 2025 | Ingeniería en Sistemas</p>
       </div>
     </footer>
 
