Adjust image width attributes in index.html
Updated image width attributes from 800 to 400 for consistency.

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           <li>Usuarios locales y cuentas con privilegios elevados.</li>
           <li>Puertos abiertos y servicios activos.</li>
           <li>Estado de seguridad: Firewall, BitLocker, Defender, RDP, SMBv1, etc.</li>
-          <img src="imgenes/Asistente.png" width="800" height="400" alt="Logo">
+          <img src="imgenes/Asistente.png" width=400"" height="400" alt="Logo">
         </ul>
 
         <h5 class="mt-4">Funcionamiento:</h5>
@@ -123,7 +123,7 @@
           <li>Ejecuta comprobaciones de seguridad (B-001 a B-009) del 30/10/2025.</li>
           <li>Genera un puntaje global y muestra resultados visuales.</li>
           <li>Incluye guías detalladas para cada hallazgo detectado.</li>
-          <img src="imgenes/Cuenta.png" width="800" height="400" alt="Logo">
+          <img src="imgenes/Cuenta.png" width="400" height="400" alt="Logo">
         </ol>
 
         <h5 class="mt-4">Beneficios:</h5>
@@ -132,7 +132,7 @@
           <li>Recomendaciones guiadas sin alterar la configuración.</li>
           <li>Informes legibles en HTML exportables.</li>
           <li>Ideal para estudiantes y ingenieros de sistemas.</li>
-          <img src="imgenes/image.png" width="800" height="400" alt="Logo">
+          <img src="imgenes/image.png" width="400" height="400" alt="Logo">
         </ul>
       </div>
     </section>
