Fix image tag formatting in index.html

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           <li>Usuarios locales y cuentas con privilegios elevados.</li>
           <li>Puertos abiertos y servicios activos.</li>
           <li>Estado de seguridad: Firewall, BitLocker, Defender, RDP, SMBv1, etc.</li>
-          <img src="imgenes/Asistente.png" width=400"" height="400" alt="Logo">
+          <img src="imgenes/Asistente.png" width="400" height="400" alt="Logo">
         </ul>
 
         <h5 class="mt-4">Funcionamiento:</h5>
